src/test/deca/context/valid/with_object/params_name.deca
class A {}

class B {
    A a = new A();
    A metA(A a){
        return a;
    }
}