src/test/deca/context/invalid/oracle/method_class_without_class.deca
class A{
    void f(){
        println("Hello WOrld !");
    }
}

{
    A a = new A();
    f();
        }